--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <div id="modal-root"></div>
     <div id="root"></div>
     <div id="modal"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
